Efmub-Ogy/src/objects/Reference__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>File_1__c</fullName>
        <label>File 1</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>File_2__c</fullName>
        <label>File 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Reference_Link__c</fullName>
        <label>Reference Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>DateTime</type>
    </fields>
    <label>Reference</label>
    <pluralLabel>References</pluralLabel>
</CustomObject>